RESOLVED FIXED50643
fast/loader/empty-embed-src-attribute.html asserts in debug builds
https://bugs.webkit.org/show_bug.cgi?id=50643
Summary fast/loader/empty-embed-src-attribute.html asserts in debug builds
Anders Carlsson
Reported 2010-12-07 13:54:08 PST
fast/loader/empty-embed-src-attribute.html asserts in debug builds
Attachments
Patch (1.46 KB, patch)
2010-12-07 13:56 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-12-07 13:56:50 PST
Anders Carlsson
Comment 2 2010-12-07 14:06:18 PST
WebKit Review Bot
Comment 3 2010-12-07 21:53:21 PST
Attachment 75841 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/update-webkit']" exit_code: 2 Updating OpenSource Incomplete data: Delta source ended unexpectedly at /usr/lib/git-core/git-svn line 5061 Died at WebKitTools/Scripts/update-webkit line 132. If any of these errors are false positives, please file a bug against check-webkit-style.
Note You need to log in before you can comment on or make changes to this bug.