fast/loader/empty-embed-src-attribute.html asserts in debug builds https://bugs.webkit.org/show_bug.cgi?id=50643

Reviewed by Sam Weinig.

Just always ignore attempts to load requests with empty URLs.

* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction):

Canonical link: https://commits.webkit.org/63879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73463 268f45cc-cd09-0410-ab3c-d52691b4dbfc